syntax = "proto3";
option java_package = "info.xiaomo.server.shared.protocol.msg";
option java_multiple_files = true;

enum GMMsgId{
  GmUnknown = 0;
  CloseServerRequest = 201001;
  CloseServerResponse = 201002;
}


enum UserMsgId{
  UserUnknown = 0;
  LoginRequest = 101001;
  LoginResponse = 101002;
}