syntax = "proto3";
option java_package = "info.xiaomo.server.shared.protocol.user";
option java_multiple_files = true;

message ReqUserLogin {
  string loginName = 1;
}

message ResUserLogin {
  string loginName = 1;
  int64 userId = 3;
}